--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
     
     <footer class="text-center mt-5 opacity-75">
-        <small>&copy; 2024 Perpustakaan Sekolah - Terintegrasi Google Form</small>
+        <small>&copy; 2026 Perpustakaan SMK NEGERI 5 JEMBER | KALIBER55 PUSTAKGARA - Terintegrasi Google Form</small>
     </footer>
 </div>
 
@@ -148,4 +148,5 @@ loadReservations();
 </script>
 
 </body>
+
 </html>
